# game-engine-rs

./: Cargo.toml  flake.nix
.direnv/: flake-profile-1-link
core/: Cargo.toml
core/src/: camera.rs  instance.rs  lib.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
desktop/: Cargo.toml
desktop/src/: main.rs
src/: main.rs
